--- a/styles.css
+++ b/styles.css
@@ -62,12 +62,20 @@ h2 {
   padding-bottom: 0.5rem;
 }
 
-.project {
-  margin-bottom: 1.5rem;
+.project.project {
+  margin-bottom: 2rem;
+  padding-bottom: 1rem;
+  border-bottom: 1px solid #ddd;
 }
 
-.project h3 {
+.project ul {
+  padding-left: 1.2rem;
   margin: 0.5rem 0;
+}
+
+.project ul li {
+  margin-bottom: 0.4rem;
+  list-style: disc;
 }
 
 /* Footer */
